--- a/.github/workflows/check_ansible.yml
+++ b/.github/workflows/check_ansible.yml
@@ -1,24 +1,25 @@
-name: Ansible Lint Check
-
-on:
-  push:
-    branches:
-      - master
-
+name: Molecule Test
+on: [push, pull_request]
 jobs:
-  ansible-lint:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: ["3.9", "3.10"]
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Lint Ansible Playbook
-      uses: ansible/ansible-lint-action@v1
-      with:
-        ansible-lint-path: playbook.yml
-    - name: Notify Slack
-      uses: slack-action/slack@v1
-      with:
-        args: Success
-      if: success()
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - uses: actions/checkout@v2
+        with:
+          path: molecule_demo
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements.txt
+      - name: Test with molecule
+        run: |
+          molecule test
