--- a/.github/workflows/check_ansible.yml
+++ b/.github/workflows/check_ansible.yml
@@ -1,25 +1,19 @@
-name: Molecule Test
+name: Ansible Lint # feel free to pick your own name
 on: [push, pull_request]
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: ["3.9", "3.10"]
 
     steps:
-      - uses: actions/checkout@v2
+      # Important: This sets up your GITHUB_WORKSPACE environment variable
+      - uses: actions/checkout@v3
         with:
-          path: molecule_demo
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
-      - name: Test with molecule
-        run: |
-          molecule test
+          fetch-depth: 0 # needed for progressive mode to work
+
+      - name: Run ansible-lint
+        # replace `main` with any valid ref, or tags like `v6`
+        uses: ansible/ansible-lint-action@main
+        # optional:
+        # with:
+        #   path: "playbooks/"  # <-- only one value is allowed
