--- a/.github/workflows/check_ansible.yml
+++ b/.github/workflows/check_ansible.yml
@@ -1,19 +1,17 @@
-name: Ansible Lint # feel free to pick your own name
-on: [push, pull_request]
+name: Ansible Lint Check
+
+on:
+  push:
+    paths:
+      - '*.yml'
 
 jobs:
-  build:
+  ansible-lint:
     runs-on: ubuntu-latest
-
     steps:
-      # Important: This sets up your GITHUB_WORKSPACE environment variable
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # needed for progressive mode to work
-
-      - name: Run ansible-lint
-        # replace `main` with any valid ref, or tags like `v6`
-        uses: ansible/ansible-lint-action@main
-        # optional:
-        # with:
-        #   path: "playbooks/"  # <-- only one value is allowed
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Lint Ansible Playbook
+      uses: ansible/ansible-lint-action@v1
+      with:
+        ansible-lint-path: install.yml
