--- a/.github/workflows/check_ansible.yml
+++ b/.github/workflows/check_ansible.yml
@@ -8,6 +8,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Lint Ansible Playbook
-      uses: ansible/ansible-lint-action@v1
+      uses: ansible/ansible-lint-action
       with:
         ansible-lint-path: install.yml
