--- a/.github/workflows/check_ansible.yml
+++ b/.github/workflows/check_ansible.yml
@@ -1,5 +1,9 @@
 name: Ansible Lint Check
-on: [push, pull_request]
+
+on:
+  push:
+    paths:
+      - '*.yml'
 
 jobs:
   ansible-lint:
@@ -8,6 +12,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Lint Ansible Playbook
-      uses: ansible/ansible-lint-action
+      uses: ansible/ansible-lint-action@v1
       with:
         ansible-lint-path: install.yml
