--- a/.github/workflows/check_ansible.yml
+++ b/.github/workflows/check_ansible.yml
@@ -18,5 +18,5 @@ jobs:
      - name: Lint playbook
        run: |
          ansible-playbook install.yml --syntax-check
-         ansible-lint install.yml
+#         ansible-lint install.yml
 
